Updated update_cell_and_death_parameters_O2_based() to support the new cycling_quiescent cycle model 



Added new function to Phenotype.Mechanics: 

	void set_relative_maximum_adhesion_distance( double new_value ); 

Added new function to Phenotype.Mechanics:

	void set_relative_equilibrium_distance( double new_value ); 

Removed the (never-used) Phenotype.Mechanics.maximum_adhesion_distance. 



bugfix: 

added missing "omp_set_num_threads(PhysiCell_settings.omp_num_threads)" in the main-heterogeneity.cpp file for the heterogeneity sample project. 

bugfix:

In BioFVM, Microenvironment::compute_gradient_vector(int), removed "static" from "static std::vector<int> indices(3,0)" to prevent rare segfaults. 




/* todo in this release */

1) a function to set interaction distance while maintaining equilibrium spacing (done)
 
2) a function to set equilibrium spacing while maintaining interaction distance (done)

3) a new cycle model for Luis (done)

4) at least a *start* on a contact function 

5) update documentation 

6) find that issue from working with Eric? 

7) add a standardized o2 and pressure-based proliferation function 



PhysiCell: an Open Source Physics-Based Cell Simulator for 3-D 
Multicellular Systems.

Version:      1.3.0
Release date: 23 February 2018 

Overview: 
PhysiCell is a flexible open source framework for building 
agent-based multicellular models in 3-D tissue environments. 

Reference: A Ghaffarizadeh, R Heiland, SH Friedman, 
   SM Mumenthaler, and P Macklin, PhysiCell: an Open Source 
   Physics-Based Cell Simulator for Multicellular Systems, 
   PLoS Comput. Biol. 14(2): e1005991, 2018. 
   DOI: 10.1371/journal.pcbi.1005991                    

Visit http://MathCancer.org/blog for the latest tutorials and help. 

Summary: 
This release introduces two new cell cycle models (G0/G1 -> 
S -> G2/M) and (G0/G1 -> S -> G2 -> M), introduces XML-based 
configuration files, and allows new user control on how 
often and where data are stored. 
